[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
name = "liveimport"
version = "0.9.0"
description = "Automatically reload modified Python modules in notebooks and scripts."
readme = "README.rst"
authors = [{ name = "Edward Screven" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "IPython >=7.16.1"
]
keywords = ["liveimport", "import", "reload", "notebooks", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/escreven/liveimport"
Repository = "https://github.com/escreven/liveimport"

[tool.setuptools]
packages = ["liveimport"]
package-dir = { "" = "src" }
include-package-data = false
